nfa: ensure that start and end states are valid
- Add checks in NFA's constructor to ensure that start and endstates are
valid (members of the automata described by the transition table.

- Adds coverage via two unit tests

Note: the coupling between start_state/end_state and the transition
table is indicative of a problem in the design. It should not be the
case that the start/end states are not members of the automata or that
it is even a possibility. One solution could be to have some sort of
iterator/reference to the table, and to store that as the start/end
nodes. In other words, use a reference to a node in the table instead of
a value. Still, this is a small enough issue that it is not worth
changing, at least for the time being

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,16 @@
-Make sure the lexer for the regex gets rid of all whitespace so that the 
- regex_patterns can look like this: ( ab | cd * )
+Should work on files
+Should return the line number and column number of the start of the match
+Record all matches
+Find first match
+What happens when we have matches inside of other matches?
+What happens if one match starts inside of another match but then extends past
+the first match?
+
+Notes:
+Difference between char literal and meta char
+Wildcards
+
+
 grammar = {
 	'E' : ["T E\'"],
 	'E\'': [" | E", ""],
